--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title>Break Breaker</title>
-	<link rel="stylesheet" type="text/css" href="style2.min.css">
-</head>
-<body>
+	<head>
+		<meta charset="utf-8">
+		<title>Break Breaker</title>
+		<link rel="stylesheet" type="text/css" href="assets/style.min.css">
+	</head>
+	<body>
+		<div class="container">
+			<div class="board">
+				Lives : <span id="livesshow">0</span> <br>
+				Score : <span id="scoreshow">0</span>
+			</div>
+			
+			<div class="bannerMulai">
+				<h1>Break Breaker</h1>
+				<span id="btnMulai">Mulai</span>
+				<p class="desc">Gunakan Anak panah untuk bergerak , <br> Capai minimal pointInView point untuk memenangkan game</p>
+			</div>
 
-	<div class="board">
-		Lives : <span id="livesshow">0</span> <br>
-		Score : <span id="scoreshow">0</span>
-	</div>
+			<div class="bannerUlangi">
+				<h1 id="title">Break Breaker</h1>
+				<span id="btnUlangi">Ulangi</span>
+				<p class="desc">Gunakan Anak panah untuk bergerak , <br> Capai minimal pointInView point untuk memenangkan game</p>
+			</div>
 
-	<div class="bannerMulai">
-		<h1>Break Breaker</h1>
-		<span id="btnMulai">Mulai</span>
-		<p class="desc">Gunakan Anak panah untuk bergerak , <br> Capai minimal pointInView point untuk memenangkan game</p>
-	</div>
-	<div class="bannerUlangi">
-		<h1 id="title">Break Breaker</h1>
-		<span id="btnUlangi">Ulangi</span>
-		<p class="desc">Gunakan Anak panah untuk bergerak , <br> Capai minimal pointInView point untuk memenangkan game</p>
-	</div>
-	<canvas id="canvas"></canvas>
+			<canvas id="canvas"></canvas>
+		</div>
 
-	<script type="text/javascript" src="script.js"></script>
-</body>
+		<!-- Call Javascript -->
+		<script type="text/javascript" src="assets/script.min.js"></script>
+	</body>
 </html>
